--- a/public/404.css
+++ b/public/404.css
@@ -12,11 +12,14 @@ body{
     color: #F3F4F6;
     margin: 0;
 }
-#homelink{
+#home{
     font-family: 'Lato', sans-serif;
     color: #F3F4F6;
     margin: 0;
+    text-decoration: none;
+    font-size: 30px;
 }
+
 #main{
     display: table;
     width: 100%;
@@ -27,6 +30,7 @@ body{
 .fof{
 	  display: table-cell;
 	  vertical-align: middle;
+      ;
 }
 
 .fof h1{
