--- a/public/404.css
+++ b/public/404.css
@@ -21,7 +21,8 @@ body{
 }
 
 #main{
-    display: table;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100vh;
     text-align: center;
